# nonebot-plugin-phigros

./: README.md  pyproject.toml
nonebot_plugin_phigros/: __init__ .py  __init__.py  config.py
