[tool.poetry]
name = "nonebot_plugin_phigros"
version = "0.0.2"
description = "一个简单的基于PhigrosLibrary的Phigros查分插件，适用于Nonebot2"
authors = ["【夜风】NightWind <2125714976@qq.com>"]
license = "GPL3"
readme = "README.md"
packages = [{include = "nonebot_plugin_phigros"}]
homepage = "https://github.com/XTxiaoting14332/nonebot-plugin-phigros"
repository = "https://github.com/XTxiaoting14332/nonebot-plugin-phigros"
documentation = "https://github.com/XTxiaoting14332/nonebot-plugin-phigros#README.md"

[[tool.poetry.source]]
name = "tsinghua"
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple/"
default = true

[tool.poetry.dependencies]
python = ">=3.8"
nonebot2 = ">=2.0.0rc1"
httpx = ">=0.22.0"
ujson = ">=5.0.0"
Pillow = ">=9.0.0"
nonebot_plugin_session = ">=0.2.3"
uuid = ">=1.30"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"