[tool.poetry]
name = "nonebot-plugin-phigros-qq"
version = "0.1.3"
description = "一个简单的基于PhigrosLibrary的Phigros查分插件，适用于nonebot-adapter-qq"
authors = ["【夜风】NightWind <2125714976@qq.com>"]
license = "GPL3"
readme = "README.md"
packages = [{include = "nonebot_plugin_phigros_qq"}]
homepage = "https://github.com/XTxiaoting14332/nonebot-plugin-phigros-qq"
repository = "https://github.com/XTxiaoting14332/nonebot-plugin-phigros-qq"
documentation = "https://github.com/XTxiaoting14332/nonebot-plugin-phigros-qq#README.md"

[[tool.poetry.source]]
name = "tsinghua"
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple/"
default = true

[tool.poetry.dependencies]
python = ">=3.8"
nonebot2 = ">=2.0.0rc1"
httpx = ">=0.22.0"
ujson = ">=5.0.0"
Pillow = ">=9.0.0"
nonebot-adapter-qq = ">=1.3.4"
uuid = ">=1.30"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
